added panelright to add hotspot information to

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2453,32 +2453,6 @@
           "height": 0,
           "width": 0
         },
-        "bc4cb9c3": {
-          "id": "bc4cb9c3",
-          "path": "img/threatened_birds_richeness.png",
-          "output": "img/threatened_birds_richeness.png",
-          "name": "threatened_birds_richeness.png",
-          "category": "IMAGE",
-          "size": 1686730,
-          "type": "png",
-          "initialSize": 1686730,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "ffc5c4ae": {
-          "id": "ffc5c4ae",
-          "path": "img/threatened_richness_10km.png",
-          "output": "img/threatened_richness_10km.png",
-          "name": "threatened_richness_10km.png",
-          "category": "IMAGE",
-          "size": 743859,
-          "type": "png",
-          "initialSize": 743859,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "d4835fce": {
           "id": "d4835fce",
           "path": "lib/images/layers-2x.png",
@@ -2647,6 +2621,220 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "507ba5fb": {
+          "id": "507ba5fb",
+          "path": "thing.js",
+          "output": "thing-dist.js",
+          "name": "thing.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "e4daade6": {
+          "id": "e4daade6",
+          "path": "img/birds.png",
+          "output": "img/birds.png",
+          "name": "birds.png",
+          "category": "IMAGE",
+          "size": 1850683,
+          "type": "png",
+          "initialSize": 1850683,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "18471d82": {
+          "id": "18471d82",
+          "path": "img/carnivora.png",
+          "output": "img/carnivora.png",
+          "name": "carnivora.png",
+          "category": "IMAGE",
+          "size": 5592433,
+          "type": "png",
+          "initialSize": 5592433,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2534807e": {
+          "id": "2534807e",
+          "path": "img/cetartiodactyla.png",
+          "output": "img/cetartiodactyla.png",
+          "name": "cetartiodactyla.png",
+          "category": "IMAGE",
+          "size": 6807800,
+          "type": "png",
+          "initialSize": 6807800,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e7593197": {
+          "id": "e7593197",
+          "path": "img/chiroptera_bats.png",
+          "output": "img/chiroptera_bats.png",
+          "name": "chiroptera_bats.png",
+          "category": "IMAGE",
+          "size": 3025115,
+          "type": "png",
+          "initialSize": 3025115,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "49888f52": {
+          "id": "49888f52",
+          "path": "img/eulipotyphla.png",
+          "output": "img/eulipotyphla.png",
+          "name": "eulipotyphla.png",
+          "category": "IMAGE",
+          "size": 4515614,
+          "type": "png",
+          "initialSize": 4515614,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2816787e": {
+          "id": "2816787e",
+          "path": "img/hummingbirds.png",
+          "output": "img/hummingbirds.png",
+          "name": "hummingbirds.png",
+          "category": "IMAGE",
+          "size": 276246,
+          "type": "png",
+          "initialSize": 276246,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ccadd845": {
+          "id": "ccadd845",
+          "path": "img/mammals.png",
+          "output": "img/mammals.png",
+          "name": "mammals.png",
+          "category": "IMAGE",
+          "size": 3054442,
+          "type": "png",
+          "initialSize": 3054442,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "3525b5aa": {
+          "id": "3525b5aa",
+          "path": "img/marsupials.png",
+          "output": "img/marsupials.png",
+          "name": "marsupials.png",
+          "category": "IMAGE",
+          "size": 756752,
+          "type": "png",
+          "initialSize": 756752,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bc30f2c3": {
+          "id": "bc30f2c3",
+          "path": "img/nonPasseriformes.png",
+          "output": "img/nonPasseriformes.png",
+          "name": "nonPasseriformes.png",
+          "category": "IMAGE",
+          "size": 1850782,
+          "type": "png",
+          "initialSize": 1850782,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2927c2b0": {
+          "id": "2927c2b0",
+          "path": "img/primates.png",
+          "output": "img/primates.png",
+          "name": "primates.png",
+          "category": "IMAGE",
+          "size": 1236328,
+          "type": "png",
+          "initialSize": 1236328,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "8e8e2c77": {
+          "id": "8e8e2c77",
+          "path": "img/rodentia.png",
+          "output": "img/rodentia.png",
+          "name": "rodentia.png",
+          "category": "IMAGE",
+          "size": 3670920,
+          "type": "png",
+          "initialSize": 3670920,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c66853b0": {
+          "id": "c66853b0",
+          "path": "img/threatened_amp.png",
+          "output": "img/threatened_amp.png",
+          "name": "threatened_amp.png",
+          "category": "IMAGE",
+          "size": 743859,
+          "type": "png",
+          "initialSize": 743859,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e6748393": {
+          "id": "e6748393",
+          "path": "img/threatened_birds.png",
+          "output": "img/threatened_birds.png",
+          "name": "threatened_birds.png",
+          "category": "IMAGE",
+          "size": 1686730,
+          "type": "png",
+          "initialSize": 1686730,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "012b219a": {
+          "id": "012b219a",
+          "path": "img/threatened_mammals.png",
+          "output": "img/threatened_mammals.png",
+          "name": "threatened_mammals.png",
+          "category": "IMAGE",
+          "size": 5276265,
+          "type": "png",
+          "initialSize": 5276265,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "86a55434": {
+          "id": "86a55434",
+          "path": "lib/leaflet.spin.js",
+          "output": "lib/leaflet.spin-dist.js",
+          "name": "leaflet.spin.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
