Added Links and Images

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -3226,19 +3226,6 @@
           "height": 0,
           "width": 0
         },
-        "d21f4574": {
-          "id": "d21f4574",
-          "path": "img/guineaLand.jpeg",
-          "output": "img/guineaLand.jpeg",
-          "name": "guineaLand.jpeg",
-          "category": "IMAGE",
-          "size": 7109,
-          "type": "jpeg",
-          "initialSize": 7109,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "449ff6a7": {
           "id": "449ff6a7",
           "path": "img/india_overpopulation.jpg",
@@ -3625,6 +3612,19 @@
           "size": 14150,
           "type": "jpg",
           "initialSize": 14150,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "f1084cd9": {
+          "id": "f1084cd9",
+          "path": "img/guineaLand.jpg",
+          "output": "img/guineaLand.jpg",
+          "name": "guineaLand.jpg",
+          "category": "IMAGE",
+          "size": 5287,
+          "type": "jpg",
+          "initialSize": 5287,
           "optimized": false,
           "height": 0,
           "width": 0
