--- a/prepros.cfg
+++ b/prepros.cfg
@@ -3712,6 +3712,64 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "e8274824": {
+          "id": "e8274824",
+          "path": "js/L.Control.ZoomMin.js",
+          "output": "js/L.Control.ZoomMin-dist.js",
+          "name": "L.Control.ZoomMin.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "f61f9e03": {
+          "id": "f61f9e03",
+          "path": "css/L.Control.ZoomMin.css",
+          "output": "css/L.Control.ZoomMin-dist.css",
+          "name": "L.Control.ZoomMin.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "f32d0246": {
+          "id": "f32d0246",
+          "path": "img/hotspot.png",
+          "output": "img/hotspot.png",
+          "name": "hotspot.png",
+          "category": "IMAGE",
+          "size": 16536,
+          "type": "png",
+          "initialSize": 16536,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bd7445a3": {
+          "id": "bd7445a3",
+          "path": "img/legend.png",
+          "output": "img/legend.png",
+          "name": "legend.png",
+          "category": "IMAGE",
+          "size": 16981,
+          "type": "png",
+          "initialSize": 16981,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
